# hc-launch

./: CHANGELOG.md  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: test.yaml
crates/hc_launch/src-tauri/: Cargo.toml
crates/hc_launch/src-tauri/src/: cli.rs  launch_tauri.rs  prepare_webapp.rs
crates/hc_launch/src-tauri/src/commands/: sign_zome_call.rs
crates/holochain_launcher_utils/: Cargo.toml
crates/holochain_launcher_utils/scripts/: package-lock.json  package.json
crates/holochain_launcher_utils/scripts/src/: zomeCallSigning.ts
crates/holochain_launcher_utils/src/: zome_call_signing.rs
