[workspace]
members = [
  "crates/holochain*",
  "crates/hc_launch/src-tauri",
]
resolver = "2"


[workspace.dependencies]
# NEW_VERSION Update holochain dependencies here
holochain_cli_sandbox = "0.5.3"
holochain_types = "0.5.3"
holochain_util = { version = "0.5.3", features = [ "pw" ] }
holochain_zome_types = "0.5.3"
holochain_conductor_api = "0.5.3"
holochain_trace = "0.5.3"

holochain_client = "0.7.1"

lair_keystore_api = "0.6.2"
